spade-tests/src/snapshots/spade_tests__ast_lowering__wildcard_is_not_allowed_in_impl_target.snap
---
source: spade-tests/src/ast_lowering.rs
---
trait T {}
impl T for _ {}


error: Impl target is not a named type
  ┌─ testinput:2:12
  │
2 │ impl T for _ {}
  │            ^ Not a named type
